FIX: Fix alignment for image artefact in search result

--- a/[0] Coding/SearchResults/SearchResults.css
+++ b/[0] Coding/SearchResults/SearchResults.css
@@ -520,6 +520,7 @@ div.form-group.col-md-6 {
     margin-bottom: 3%;
 }
 
-div#video-col.form-group.col-md-6 {
+div#artefact.form-group.col-md-6 {
     text-align: center;
 }
+
